@@ -65,4 +65,4 @@
 #scopev4 ::ffff:10.0.0.0/104     5
 #scopev4 ::ffff:172.16.0.0/108   5
 #scopev4 ::ffff:192.168.0.0/112  5
-#scopev4 ::ffff:0.0.0.0          14
+#scopev4 ::ffff:0.0.0.0/96       14
